k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlplane-api-service
  namespace: controlplane
spec:
  selector:
    app: controlplane-api
  ports:
    - port: 3000
      targetPort: 3000
