k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlplane-ingress
  namespace: controlplane
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: controlplane.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlplane-api-service
                port:
                  number: 3000
